policies/prevent-bare-pods/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-bare-pods
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: prevent-bare-pods
    rule: bare-pods
    kind: Pod
    resources:
      - good-pod-owned
    result: pass
  - policy: prevent-bare-pods
    rule: bare-pods
    kind: Pod
    resources:
      - bad-pod-bare
    result: fail
  - policy: prevent-bare-pods
    rule: bare-pods
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
